--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <script>
     jQuery(function($) {
     $(window).scroll(function(){
-        if($(this).scrollTop()>78){
+        if($(this).scrollTop()>1){
             $('#container_menu').addClass('fixed');
         }
-        else if ($(this).scrollTop()<78){
+        else if ($(this).scrollTop()<1){
             $('#container_menu').removeClass('fixed');
         }
     });
@@ -22,41 +22,162 @@
 </head>
 <body>
     <header>
-        <div class="header">
-
-                <div class="logo">
-                    <img alt="" src="img/logo-realsolar.png">
-                    <p class="logo_text">
-                        Резервное и автономное электроснабжение для вашего загородного дома.<br/>
-                        Продажа, установка и обслуживание солнечных электростанций для частных домов.<br/>
-                        Проектирование, монтаж и сервисное обслуживание котельных в коттеджах.</p>
-                </div>
-
             <div id="container_menu">
-
-                <div class="side">
-                    <ul class="menu">
-                        <li class="menu__list"><div class="line_container"><div class="line__red_updown"></div><div class="line__white"></div><div class="line__red_in"></div><div class="line__white"></div><div class="line__red_in"></div><div class="line__white"></div><div class="line__red_updown"></div></div>
-                            <ul class="menu__drop">
-                                <li><a href="#">Главная</a></li>
-                                <li><a href="#">Вопрос-Ответ</a></li>
-                                <li><a href="#">Где купить</a></li>
-                                <li><a href="#">Обратная связь</a></li>
-                                <!-- <li><a href="#">Пункт 5</a></li> -->
-                            </ul>
-                        </li>
-                    </ul>    
-                </div>
-
-                <div class="title">Стабилизатор напряжения 5 квт</div>
-
-                <div class="right"></div>
-
-            </div>
-        </div>    
+                    <nav>
+                        <ul class="menu">
+                            <li class="menu__list"><div class="line_container"><div class="line__red_updown"></div><div class="line__white"></div><div class="line__red_in"></div><div class="line__white"></div><div class="line__red_in"></div><div class="line__white"></div><div class="line__red_updown"></div></div>
+                                <ul class="menu__drop">
+                                    <li><a href="index.html" title="Сетевые электростанции">Сетевые электростанции</a></li>
+                                    <li><a href="invertor.html" title="Инвертор Sofar">Инвертор Sofar</a></li>
+                                    <li><a href="contacts.html" title="Контакты">Контакты</a></li>
+                                    <!-- <li><a href="#">Обратная связь</a></li> -->
+                                    <!-- <li><a href="#">Пункт 5</a></li> -->
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                <div class="title">Сетевые солнечные электростанции</div>
+                <div class="right__support"></div>
+                <nav class="right__menu">
+                    <ul>
+                        <li><a href="index.html" title="Сетевые электростанции">Сетевые электростанции</a></li>
+                        <li><a href="invertor.html" title="Инвертор Sofar">Инвертор Sofar</a></li>
+                        <li><a href="contacts.html" title="Контакты">Контакты</a></li>
+                    </ul>
+                </nav>
+            </div>   
     </header>
     <main>
-        <div class="a1"></div>
+
+        <div class="bg-image-1">
+            <p class="bg-image-big-title">Lorem ipsum</p><br/>
+            <p class="bg-image-mini-title">Lorem ipsum</p>
+        </div>
+
+<div class="container_main">
+
+        <div class="container_block">
+            <div class="block-1">
+                <div class="block-1__line-left"></div>
+                <div class="block-1__title-left">
+                    <p>Lorem ipsum</p>
+                </div>
+                <div class="block-1__text-left">
+                    <p>«Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.»</p>
+                </div>
+            </div>
+            <div class="block-2"></div>
+        </div>
+
+        <div class="line-important">
+            <div class="line-left"></div>
+            <div class="point"></div>
+            <div class="line-right"></div>
+        </div>
+
+        <div class="container_block-max-width">
+            <div class="block-2"></div>
+            <div class="block-1">
+                <div class="block-1__line-right"></div>
+                <div class="block-1__title-right">
+                    <p>Lorem ipsum</p>
+                </div>
+                <div class="block-1__text-right">
+                    <p>«Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.»</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container_block-min-width">
+                <div class="block-1">
+                    <div class="block-1__line-left"></div>
+                    <div class="block-1__title-left">
+                        <p>Lorem ipsum</p>
+                    </div>
+                    <div class="block-1__text-left">
+                        <p>«Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.»</p>
+                    </div>
+                </div>
+                <div class="block-2"></div>
+            </div>
+
+        <div class="line-important">
+            <div class="line-left"></div>
+            <div class="point"></div>
+            <div class="line-right"></div>
+        </div>
+
+        <div class="container_block">
+            <div class="block-1">
+                <div class="block-1__line-left"></div>
+                <div class="block-1__title-left">
+                    <p>Lorem ipsum</p>
+                </div>
+                <div class="block-1__text-left">
+                    <p>«Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.»</p>
+                </div>
+            </div>
+            <div class="block-2"></div>
+        </div>
+
+        <div class="line-important">
+            <div class="line-left"></div>
+            <div class="point"></div>
+            <div class="line-right"></div>
+        </div>
+
+        <div class="container-block-advantages">   
+
+            <div class="block-advantages">
+                <div class="block-1__advantages"></div>
+                <div class="block-2__advantages">
+                    <div class="block-2__advantages-title">
+                            <p>Lorem ipsum</p>
+                    </div>
+                    <div class="block-2__advantages-text">
+                            <p>«Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam»</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="block-advantages">
+                <div class="block-1__advantages"></div>
+                <div class="block-2__advantages">
+                    <div class="block-2__advantages-title">
+                            <p>Lorem ipsum</p>
+                    </div>
+                    <div class="block-2__advantages-text">
+                            <p>«Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam»</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="block-advantages">
+                <div class="block-1__advantages"></div>
+                <div class="block-2__advantages">
+                    <div class="block-2__advantages-title">
+                            <p>Lorem ipsum</p>
+                    </div>
+                    <div class="block-2__advantages-text">
+                            <p>«Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam»</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="block-advantages">
+                <div class="block-1__advantages"></div>
+                <div class="block-2__advantages">
+                    <div class="block-2__advantages-title">
+                            <p>Lorem ipsum</p>
+                    </div>
+                    <div class="block-2__advantages-text">
+                            <p>«Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam»</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+</div>
     </main>
     <footer></footer> 
 </body>
